<resources>
    <string name="app_name">RMEAVDemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="take_a_photo">take a photo</string>
    <string name="select_image">select image</string>
    <string name="btnAction">START</string>
    <string name="btnStop">STOP</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="action_speaker_enroll">Speaker Enrollment</string>
    <string name="action_about">About</string>
    <string name="cameraIntroduction">
        <![CDATA[
            Camera
        ]]>
    </string>
    <string name="cameraCaptureImage">Capture</string>
    <string name="cameraInformation">Information</string>
    <string name="cameraPermission">Camera permission is needed!</string>
    <string name="cameraError">No Support for the Camera2 API.</string>
    <string name="pref_ListCameraLensDirection">Camera Direction</string>
    <string name="pref_ListCameraLensDirection_dialog_title">Camera Direction</string>
    <string name="pref_ListCameraLensDirection_default_value">front</string>
    <string name="pref_ListCameraLensDirection_summary">Camera Direction: %s</string>
    <string-array name="pref_ListCameraLensDirection_entries">
        <item>Front</item>
        <item>Back (Rear)</item>
        <item>External</item>
    </string-array>
    <string-array name="pref_ListCameraLensDirection_entry_values">
        <item>front</item>
        <item>back</item>
        <item>external</item>
    </string-array>
    <string name="pref_CategoryEngine">Main Engine Settings</string>
    <string name="pref_CategoryEngineCommonAudio">Common Audio Settings</string>
    <string name="pref_CategoryEngineEmbedded">Embedded Engine Settings</string>
    <string name="pref_CategoryEngineClientServer">Client/Server Settings</string>
    <string name="pref_SwitchEmbeddedEngine">Embedded Engine</string>
    <string name="pref_SwitchEmbeddedEngine_summary">
      If you choose Embedded Engine, everything runs on this device.
      Otherwise, a client will be used to connect to a server.
    </string>
    <string name="pref_SeekBarRMESpchWeight">pref_SeekBarRMESpchWeight</string>
    <string name="pref_SeekBarRMESpchWeight_summary">Speech Weight</string>
    <string name="pref_SeekBarRMESpchWeight_min">0</string>
    <string name="pref_SeekBarRMESpchWeight_max">100</string>
    <string name="pref_SeekBarRMESpchWeight_default_value">100</string>
    <string name="pref_SeekBarRMESpchWeight_title">Speech Weight</string>
    <string name="pref_SeekBarRMESpkrWeight">pref_SeekBarRMESpkrWeight</string>
    <string name="pref_SeekBarRMESpkrWeight_summary">Speaker Weight</string>
    <string name="pref_SeekBarRMESpkrWeight_min">0</string>
    <string name="pref_SeekBarRMESpkrWeight_max">100</string>
    <string name="pref_SeekBarRMESpkrWeight_default_value">0</string>
    <string name="pref_SeekBarRMESpkrWeight_title">Speaker Weight</string>
    <string name="pref_SeekBarRMEFaceWeight">pref_SeekBarRMEFaceWeight</string>
    <string name="pref_SeekBarRMEFaceWeight_summary">Face Weight</string>
    <string name="pref_SeekBarRMEFaceWeight_min">0</string>
    <string name="pref_SeekBarRMEFaceWeight_max">100</string>
    <string name="pref_SeekBarRMEFaceWeight_default_value">0</string>
    <string name="pref_SeekBarRMEFaceWeight_title">Face Weight</string>
    <string name="pref_ListRMEAVAction">Action</string>
    <string name="pref_ListRMEAVAction_dialog_title">Embedded Engine Action</string>
    <string name="pref_ListRMEAVAction_default_value">transcribe</string>
    <string name="pref_ListRMEAVAction_summary">Action: %s</string>
    <string-array name="pref_ListRMEAVAction_entries">
        <item>Transcribe Only</item>
        <item>Segment, Identify Speaker, and Transcribe</item>
    </string-array>
    <string-array name="pref_ListRMEAVAction_entry_values">
        <item>transcribe</item>
        <item>segmenttranscribe</item>
    </string-array>
    <string name="pref_EditTextEmbeddedRootDir">Embedded Engine Root Dir</string>
    <string name="pref_EditTextEmbeddedRootDir_summary">
        Enter the location of Root Dir for the Embedded Engine.
    </string>
    <string name="pref_EditTextEmbeddedRootDir_default_value">/sdcard/rmeroot</string>
    <string name="pref_EditTextEmbeddedUserID">Embedded Engine UserID</string>
    <string name="pref_EditTextEmbeddedUserID_summary">
        Enter the UserID used for the Embedded Engine.
    </string>
    <string name="pref_EditTextEmbeddedUserID_default_value">rmeeng16k16</string>
    <string name="pref_ListRMESpchEmbeddedLanguage">Embedded Engine Language</string>
    <string name="pref_ListRMESpchEmbeddedLanguage_dialog_title">Embedded Engine Languague</string>
    <string name="pref_ListRMESpchEmbeddedLanguage_default_value">eng_us</string>
    <string name="pref_ListRMESpchEmbeddedLanguage_summary">Language: %s</string>
    <string-array name="pref_ListRMESpchEmbeddedLanguage_entries">
        <item>English</item>
        <item>Arabic - عربى</item>
        <item>German - Deutsche</item>
        <item>Mandarin Chinese - 中文</item>
        <item>Bilingual English-Arabic</item>
        <item>Bilingual English-German</item>
        <item>Bilingual English-Mandarin</item>
    </string-array>
    <string-array name="pref_ListRMESpchEmbeddedLanguage_entry_values">
        <item>eng_us</item>
        <item>ara_gen</item>
        <item>ger_de</item>
        <item>chi_man</item>
        <item>ara_gen_eng_us</item>
        <item>ger_de_eng_us</item>
        <item>chi_man_eng_us</item>
    </string-array>
    <string name="pref_ListRMESpchEmbeddedModelVersion">Speech Recognition Model Version</string>
    <string name="pref_ListRMESpchEmbeddedModelVersion_dialog_title">Speech Recognition Model Version</string>
    <string name="pref_ListRMESpchEmbeddedModelVersion_default_value">Medium</string>
    <string name="pref_ListRMESpchEmbeddedModelVersion_summary">Speech Model Version: %s</string>
    <string-array name="pref_ListRMESpchEmbeddedModelVersion_entries">
        <item>Small (~350 MB)</item>
        <item>Medium (~800 MB)</item>
        <item>Large (~1.1 GB)</item>
        <item>Huge  (~1.5 GB)</item>
    </string-array>
    <string-array name="pref_ListRMESpchEmbeddedModelVersion_entry_values">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Huge</item>
    </string-array>
    <string name="pref_ListRMEFaceEmbeddedDetectModelVersion">Image Detection Model Version</string>
    <string name="pref_ListRMEFaceEmbeddedDetectModelVersion_dialog_title">Image detection Model Version</string>
    <string name="pref_ListRMEFaceEmbeddedDetectModelVersion_default_value">Face</string>
    <string name="pref_ListRMEFaceEmbeddedDetectModelVersion_summary">Image Detection Version: %s</string>
    <string-array name="pref_ListRMEFaceEmbeddedDetectModelVersion_entries">
        <item>Face Detection</item>
        <item>Object Detection</item>
    </string-array>
    <string-array name="pref_ListRMEFaceEmbeddedDetectModelVersion_entry_values">
        <item>Face</item>
        <item>Object</item>
    </string-array>
    <string name="pref_ListRMEFaceEmbeddedRecoModelVersion">Image Recognition Model Version</string>
    <string name="pref_ListRMEFaceEmbeddedRecoModelVersion_dialog_title">Image Recognition Model Version</string>
    <string name="pref_ListRMEFaceEmbeddedRecoModelVersion_default_value">Face</string>
    <string name="pref_ListRMEFaceEmbeddedRecoModelVersion_summary">Image Recognition Version: %s</string>
    <string-array name="pref_ListRMEFaceEmbeddedRecoModelVersion_entries">
        <item>Face Detection</item>
  
    </string-array>
    <string-array name="pref_ListRMEFaceEmbeddedRecoModelVersion_entry_values">
        <item>Face</item>
    
    </string-array>
    <string name="pref_SwitchEmbeddedDoEndpointing">Perform Endpointing</string>
    <string name="pref_SwitchEmbeddedDoEndpointing_summary">
      Tries to break up sentences according to pause.
    </string>
    <string name="pref_SwitchEmbeddedDoWordAlignment">Perform Word Alignment</string>
    <string name="pref_SwitchEmbeddedDoWordAlignment_summary">
      Return timestamps for each word in the final result for speech recognition.
    </string>
    <string name="pref_SwitchEmbeddedDoPhoneAlignment">Perform Phone Alignment</string>
    <string name="pref_SwitchEmbeddedDoPhoneAlignment_summary">
      Return timestamps for each Phoneme in the final result for speech recognition.
    </string>
    <string name="pref_EditTextServerAddress">Server Address:</string>
    <string name="pref_EditTextServerAddress_summary">
        Enter the fully qualified address of the server or its ip address.
    </string>
    <string name="pref_EditTextServerAddress_default_value">rmeav1.audiovisualreco.com</string>
    <string name="pref_EditTextServerPort">Server Port:</string>
    <string name="pref_EditTextServerPort_summary">
        Enter the server port -- depends on the language.
    </string>
    <string name="pref_EditTextServerPort_default_value">17201</string>
    <string name="pref_EditTextClientServerUserID">Client/Server Engine UserID</string>
    <string name="pref_EditTextClientServerUserID_summary">
        Enter the UserID used for the Client/Server Engine.
    </string>
    <string name="pref_EditTextClientServerUserID_default_value">rmeeng16k16</string>
    <string name="pref_ListRMESpchClientServerLanguage">Client/Server Engine Language</string>
    <string name="pref_ListRMESpchClientServerLanguage_dialog_title">Client/Server Engine Languague</string>
    <string name="pref_ListRMESpchClientServerLanguage_default_value">eng_us</string>
    <string name="pref_ListRMESpchClientServerLanguage_summary">Language: %s</string>
    <string-array name="pref_ListRMESpchClientServerLanguage_entries">
        <item>English</item>
        <item>Arabic - عربى</item>
        <item>German - Deutsche</item>
        <item>Mandarin Chinese - 中文</item>
        <item>Bilingual English-Arabic</item>
        <item>Bilingual English-German</item>
        <item>Bilingual English-Mandarin</item>
    </string-array>
    <string-array name="pref_ListRMESpchClientServerLanguage_entry_values">
        <item>eng_us</item>
        <item>ara_gen</item>
        <item>ger_de</item>
        <item>chi_man</item>
        <item>ara_gen_eng_us</item>
        <item>ger_de_eng_us</item>
        <item>chi_man_eng_us</item>
    </string-array>
    <string name="pref_ListRMESpchClientServerModelVersion">Speech Recognition Model Version</string>
    <string name="pref_ListRMESpchClientServerModelVersion_dialog_title">Speech Recognition Model Version</string>
    <string name="pref_ListRMESpchClientServerModelVersion_default_value">Medium</string>
    <string name="pref_ListRMESpchClientServerModelVersion_summary">Speech Model Version: %s</string>
    <string name="pref_ListRMEFaceClientServerDetectModelVersion">Image Detect Model Version</string>
    <string name="pref_ListRMEFaceClientServerDetectModelVersion_default_value">Face</string>
    <string name="pref_ListRMEFaceClientServerDetectModelVersion_summary">Image Detection Version: %s</string>
    <string name="pref_ListRMEFaceClientServerRecoModelVersion">Image Recognition Model Version</string>
    <string name="pref_ListRMEFaceClientServerRecoModelVersion_default_value">Face</string>
    <string name="pref_ListRMEFaceClientServerRecoModelVersion_summary">Image Recognition Version: %s</string>
    <string name="pref_ListRMESpchSamplingRate">Audio Sampling Rate</string>
    <string name="pref_ListRMESpchSamplingRate_default_value">16000</string>
    <string name="pref_ListRMESpchSamplingRate_summary">Sampling Rate: %s</string>
</resources>